# ormguard

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.gemini/: styleguide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  gemini-review.yml  release.yml
docs/: CONVENTIONS.md  DESIGN.md  USAGE.md  V2_OFFLINE_REPLAY.md
examples/: fastapi_app.py  validate_aace_tenant.py
ormguard/: __init__.py  _schema.py  baseline.py  cli.py  config.py  configfile.py  core.py  diff.py  fleet.py  matrix.py  model.py  notify.py  orm.py  output.py  reflect.py  selfcheck.py  suggest.py  types.py  usage.py
ormguard/integrations/: fastapi.py
ormguard/replay/: __init__.py  catalog.py  engine.py  loader.py  recorder.py  report.py  sql.py
tests/: test_aace_drift_cases.py  test_baseline.py  test_checks_enums.py  test_cli.py  test_cli_formats.py  test_configfile.py  test_core_sqlite.py  test_defaults.py  test_fleet.py  test_fleet_column_analysis.py  test_foreign_keys.py  test_indexes.py  test_multibase.py  test_mysql_integration.py  test_notify.py  test_output.py  test_ownership.py  test_postgres_integration.py  test_replay_m1.py  test_replay_m2.py  test_replay_m3.py  test_replay_m4.py  test_suggest.py  test_types.py  test_usage.py  test_views_and_server_managed.py
