[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ormguard"
dynamic = ["version"]
description = "Fail-fast schema validation for SQLAlchemy — Hibernate's ddl-auto=validate for Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JuneSoo" }]
keywords = ["sqlalchemy", "alembic", "schema", "validation", "drift", "fastapi", "orm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Framework :: FastAPI",
]
dependencies = ["SQLAlchemy>=1.4"]

[project.optional-dependencies]
replay = ["alembic>=1.7", "sqlglot>=20"]
config = ["tomli>=1.1; python_version < '3.11'"]
dev = ["pytest>=7", "ruff", "alembic>=1.7", "sqlglot>=20", "tomli>=1.1; python_version < '3.11'"]

[project.scripts]
ormguard = "ormguard.cli:main"

[project.urls]
Homepage = "https://github.com/gogo1414/ormguard"
Repository = "https://github.com/gogo1414/ormguard"
Issues = "https://github.com/gogo1414/ormguard/issues"
Changelog = "https://github.com/gogo1414/ormguard/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

# Used before the first git tag exists, so builds never fail pre-release.
[tool.hatch.version.raw-options]
fallback_version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "ormguard/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["ormguard"]

[tool.ruff]
line-length = 110

[tool.pytest.ini_options]
markers = [
    "postgres: integration tests that require a real PostgreSQL (set DATABASE_URL)",
    "mysql: integration tests that require a real MySQL (set DATABASE_URL_MYSQL)",
]
# Skip DB-backed tests in the default (SQLite-only) run.
addopts = "-m 'not postgres and not mysql'"
